2007-07-28  Andreas Røsdal  <andreasr@gnome.org>

	* menu.c: Apply "view toolbar" property on startup. Patch from
	Ferenc Gerlits in bug #451360.

2007-07-13  Thomas H.P. Andersen  <phomes@gmail.com>

	* game.c Don't enter endless loop when there are no safe teleport locations
	Patch from Ferenc Gerlits in bug #438829.

2007-06-27  Thomas H.P. Andersen  <phomes@gmail.com>

	* properties.c:
	* gnobots2.schemas.in: Change default keys to non-numlock values (Bug #392584)

2007-06-26  Thomas H.P. Andersen  <phomes@gmail.com>

	* game.c: Don't use klotski as game name in high score list

2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* gnobots2/graphics.c
	* gnobots.c
	* gnobots.h
	* menu.c
	* game.c
	* game.h
	* properties.c: Migrate gnobots to new high scores API.
	Patch from Thomas Andersen in bug #316360.

2007-02-03  Andreas Røsdal  <andreasr@gnome.org>

	* properties.c: Cheating was possible while the preferences dialog
	is open. Patch from Thomas Andersen in Bug #403421.

2007-02-02  Robert Ancell  <robert.ancell@gmail.com>

	* gnobots2.schemas.in: Change key owners from glines to gnobots2 (Bug #403426)

2006-10-28  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* game.c: Close Bug #Bug 353303: safe_teleport_available function
	is confusing GAME_WIDTH with GAME_HEIGHT.

2006-08-03 Jason Clinton <me@jasonclinton.com>

	* help/C/gnobots2-C.omf:
	* help/C/gnobots2.xml: remove references to Linux to avoid RMS flamewar

2006-07-10 Jason Clinton <me@jasonclinton.com>

	* Makefile.am: fix up reference to deleted README

2006-06-21  Andreas Røsdal  <andrearo@stud.ntnu.no>

	* menu.c:
	* menu.h: 
	* gnobots.c: Add fullscreen mode.


2006-06-15  Richard Hoelscher  <rah@rahga.com>

	* README: Unusued, removed.

2006-05-19  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Really fix the icon name this time.

2006-05-11  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots2.desktop.in (Icon): Use the correct icon name. See bug
	#341245.
