@@ -1,3 +1,8 @@
+2007-09-02  Thomas H.P. Andersen  <phomes@gmail.com>
+
+	* properties.c: Apply new keys when closing preferences window.
+	Fixes bug #449656 
+
 2007-07-28  Andreas Røsdal  <andreasr@gnome.org>
 
 	* menu.c: Apply "view toolbar" property on startup. Patch from
@@ -5,7 +10,7 @@
 
 2007-07-13  Thomas H.P. Andersen  <phomes@gmail.com>
 
-	* game.c Don't enter endless loop when there are no safe teleport locations
+	* game.c: Don't enter endless loop when there are no safe teleport locations
 	Patch from Ferenc Gerlits in bug #438829.
 
 2007-06-27  Thomas H.P. Andersen  <phomes@gmail.com>
